Hacking to enable 2GB+ images on windows 64

--- a/Libs/vtkITK/CMakeLists.txt
+++ b/Libs/vtkITK/CMakeLists.txt
@@ -44,7 +44,7 @@ set(${PROJECT_NAME}_ITK_COMPONENTS
   ITKAnisotropicSmoothing
   ITKCommon
   ITKConnectedComponents
-  ITKDeprecated
+#  ITKDeprecated
   ITKDistanceMap
   ITKIOGDCM
   ITKIOGE
